Updating styles on login, fixing spacing in assorted code

--- a/airtime_mvc/public/css/styles.css
+++ b/airtime_mvc/public/css/styles.css
@@ -1158,7 +1158,7 @@ input[type="checkbox"] {
 .logobox {
     height:120px;
     text-align:center;
-    background:url(images/airtime_logo_big.png) no-repeat 50% 0;
+    background:url(images/logotype_white.png) no-repeat 50% 0;
 }
 
 .login {
